<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/indexFragment">

    <fragment
        android:id="@+id/connectionFragment"
        android:name="dylanbricar.android.pictureupload.screens.connection.ConnectionFragment"
        android:label="@string/connection_label" >
        <action
            android:id="@+id/action_connectionFragment_to_indexFragment"
            app:destination="@id/indexFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="dylanbricar.android.pictureupload.screens.about.AboutFragment"
        android:label="@string/about_label"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/indexFragment"
        android:name="dylanbricar.android.pictureupload.screens.index.IndexFragment"
        android:label="@string/index_label"
        tools:layout="@layout/fragment_index">
        <action
            android:id="@+id/action_indexFragment_to_connectionFragment"
            app:destination="@id/connectionFragment"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_indexFragment_to_listingFragment"
            app:destination="@id/listingFragment" />
        <action
            android:id="@+id/action_indexFragment_to_uploadFragment"
            app:destination="@id/uploadFragment" />
        <action
            android:id="@+id/action_indexFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_indexFragment_to_logsFragment"
            app:destination="@id/logsFragment" />
    </fragment>

    <fragment
        android:id="@+id/logsFragment"
        android:name="dylanbricar.android.pictureupload.screens.logs.LogsFragment"
        android:label="@string/logs_label"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/listingFragment"
        android:name="dylanbricar.android.pictureupload.screens.listing.ListingFragment"
        android:label="@string/menu_listing"
        tools:layout="@layout/fragment_listing" />

    <fragment
        android:id="@+id/uploadFragment"
        android:name="dylanbricar.android.pictureupload.screens.upload.UploadFragment"
        android:label="@string/upload_label"
        tools:layout="@layout/fragment_upload">
    </fragment>
</navigation>
