<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="indexViewModel"
            type="dylanbricar.android.pictureupload.screens.index.IndexViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context=".screens.upload.UploadFragment">

        <Button
            android:id="@+id/uploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/upload_label"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/listingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/menu_listing"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/logsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/logs_label"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/about_label"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/disconnectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:text="@string/deconnection_label"
            app:backgroundTint="#F6616D" />
    </LinearLayout>
</layout>